Project

General

Profile

Actions

Bug #41034

closed

cephfs-journal-tool: NetHandler create_socket couldn't create socket

Added by Anonymous almost 5 years ago. Updated almost 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Community (user)
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
tools
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Ubuntu 18.04 with ceph Nautilus repo
Journal tool is broken:
2019-07-31 19:36:56.879 7f57bf308700 -1 NetHandler create_socket couldn't create socket (97) Address family not supported by protocol


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #45853: octopus: cephfs-journal-tool: NetHandler create_socket couldn't create socket ResolvedNathan CutlerActions
Copied to CephFS - Backport #45854: nautilus: cephfs-journal-tool: NetHandler create_socket couldn't create socket ResolvedNathan CutlerActions
Actions #1

Updated by Neha Ojha almost 5 years ago

  • Status changed from New to Need More Info

Can you please elaborate on this, which journal tool are you talking about?
If possible, could you provide steps to reproduce this issue.

Actions #2

Updated by Anonymous almost 5 years ago

the cephfs-journal-tool but I also see this with the cephfs-data-scan
but I made a mistake, its Ubuntu 16.04, on the 18.04 I don't see it so I assume this is somehow related to either/and the Ubuntu version and its deps , or because the new mons have 2 different port and protocols and 1 causes that error

happy to help more if you can let me know how to provide more detail, strace maybe?

Actions #3

Updated by Anonymous almost 5 years ago

I forgot to say: the tool functions work, the warning/error doesn't affect its functionality but its confusing if you don't know that

Actions #4

Updated by Zheng Yan about 4 years ago

  • Status changed from Need More Info to Fix Under Review
  • Pull request ID set to 34942
Actions #5

Updated by Patrick Donnelly almost 4 years ago

  • Project changed from RADOS to CephFS
  • Subject changed from journal tool NetHandler create_socket couldn't create socket to cephfs-journal-tool: NetHandler create_socket couldn't create socket
  • Assignee set to Zheng Yan
  • Target version changed from v14.2.2 to v16.0.0
  • Source set to Community (user)
  • Backport set to octopus,nautilus
  • Component(FS) tools added
Actions #6

Updated by Patrick Donnelly almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #7

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45853: octopus: cephfs-journal-tool: NetHandler create_socket couldn't create socket added
Actions #8

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45854: nautilus: cephfs-journal-tool: NetHandler create_socket couldn't create socket added
Actions #9

Updated by Loïc Dachary almost 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF