tools/cephfs: don't bind to public_addr

In some setup, binding to public_addr causes error:
 NetHandler create_socket couldn't create socket (97) Address family not supported by protocol

Fixes: https://tracker.ceph.com/issues/41034
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>